--- a/calculator.css
+++ b/calculator.css
@@ -9,18 +9,18 @@
   background-color: rgb(107, 72, 110);
   border: 1px solid black;
   border-radius: 8px;
-  height: 55%;
-  width: 24%;
+  height: 500px;
+  width: 400px;
 }
 
 .resultcontent {
   display: inline-grid;
-  grid-template-columns: 210px 60px;
-  grid-column-gap: 10px;
+  grid-template-columns: 75% 25%;
+  grid-column-gap: 15px;
   justify-content: center;
   height: 20%;
   width: 100%;
-  padding: 10px;
+  padding: 15px 20px;
   border-bottom: 1px solid black;
 }
 
@@ -29,8 +29,7 @@
   color: black;
   border: none;
   border-radius: 8px;
-  outline: none;
-  padding: 10px;
+  padding: 15px;
 }
 
 #clearbutton {
@@ -51,17 +50,18 @@
 /* button section */
 
 .button_container {
+  height: 80%;
   display: grid;
   grid-template-columns: auto auto auto auto;
-  grid-row-gap: 10px;
-  grid-column-gap: 10px;
+  grid-row-gap: 15px;
+  grid-column-gap: 15px;
   justify-items: center;
-  padding: 10px;
+  padding: 15px;
 }
 
 .button {
-  height: 60px;
-  width: 60px;
+  height: 100%;
+  width: 100%;
   background-color: whitesmoke;
   text-align: center;
   border: 1px none;
